--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <script src="index.js"></script>
 </head>
 
+
 <body id="t" class="offline">
     <div id="messageBox" class="sendmessage">
-         <h1 style="text-align: center;font-family: 'Open Sans', sans-serif;">Нажмите "Пробел" для старта</h1>
+        <style type="text/css">
+            @font-face {
+            font-family: DPix_8pt;
+            scr: url(assets/font/Dpix_8pt.ttf)
+                    }
+        </style>
+         <h1 style="text-align: center; font-family: DPix_8pt;">Добро пожаловать на ПТЖБ</h1>
          <div class="niokbutton" onclick="okbuttonsend()"></div>
     </div>
     <div id="main-frame-error" class="interstitial-wrapper">
